--- a/config.env
+++ b/config.env
@@ -1,18 +1,13 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# Please read this for filling instructions: https://github.com/SlamDevs/slam-mirrorbot#setting-up-config-file
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "5235745411:AAE7GBjR17_9Rrh1UbDd7xuATI513TSNqpQ"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+OWNER_ID = 1962438125
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 8
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API = 23768009
+TELEGRAM_HASH = "213c50b464e39d3bf8e3727b0201b7df"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""  # Split by space
@@ -20,7 +15,7 @@ SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
-STATUS_LIMIT = ""  # Recommended limit is 4
+STATUS_LIMIT = "4"  # Recommended limit is 4
 # Leech
 TG_SPLIT_SIZE = ""  # leave it empty for max size (2GB)
 AS_DOCUMENT = ""
